# nan-ai-engineering-labs

./: .cspell_custom_dict.txt  .cspellrc.json  .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  ENGLISH_CONVERSION_AUDIT.md  ENGLISH_CONVERSION_REPORT.md  GETTING_STARTED.md  LICENSE  README.md  STATUS.md  audit_output.txt  pyproject.toml
.cspell_reports/: all_md_files.txt  batch15.txt  batch16.txt  batch16_files.txt  batch17_files.txt  batch17_output.txt  batch18.txt  batch18_files.txt  batch18_output.txt  batch19.txt  batch19_output.txt  batch20_files.txt  batch20_output.txt  batch21.txt  batch21_files.txt  batch21_output.txt  batch22.txt  batch22_files.txt  batch22_output.txt  batch23_files.txt  batch23_output.txt  batch24.txt  batch24_files.txt  batch24_output.txt  batch25.txt  batch25_files.txt  batch25_output.txt  batch26.txt  batch26_files.txt  batch26_output.txt  batch27.txt  batch27_files.txt  batch27_output.txt  batch28.txt  batch28_files.txt  batch28_output.txt  batch29.txt  batch29_files.txt  batch29_output.txt  batch30.txt  (+11 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: pull_request_template.md
docs/: CHARTER.md  COVERAGE-GAP-MATRIX.md  EXAMPLE-BACKLOG-PILOT.md  IMPLEMENTATION-STATUS.md  LEARNING-PATH.md  MODULE-LAB-STANDARD.md  MODULES-COMPARISON-WITH-TRAINING-PY.md  PHASES-CREACION.md  QUICK-START.md  README.md  RESOURCES.md  RESUMEN-MODULOS.md  ROADMAP-ORIGINAL.md  STUDY-RHYTHM.md
scripts/: _batch_translate_from_cspell_lines.py  _bulk_replace_spanish_terms.py  convert_to_english.py  (+12 more)
(+490 files in other folders)
